# thot

./: CITATION.cff  Cargo.toml  rust-toolchain.toml
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/lib_impl/: mod.rs  surreal_db.rs
core/src/runner/: mod.rs  runner.rs  runner_test.rs  tree.rs
desktop/: BUILD.md  Cargo.toml  README.md  Trunk.toml  close_ports.ps1  index.html  package-lock.json  package.json  tailwind.config.js
desktop/public/scripts/: dragdrop.webview2.polyfill.js
desktop/src/: app.rs  common.rs  lib.rs  main.rs  types.rs
desktop/src-lib/: Cargo.toml
desktop/src-lib/src/: command.rs  event.rs  settings.rs
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: common.rs  constants.rs  fs_action.rs  lib.rs  main.rs  settings.rs  setup.rs  state.rs
desktop/src-tauri/src/commands/: analyses.rs  asset.rs  common.rs  container.rs  graph.rs  project.rs  settings.rs
desktop/src-tauri/src/db/: actor.rs  init.rs
desktop/src/commands/: flag.rs  mod.rs
desktop/src/components/: autofocus.rs  detail_popout.rs  drawer.rs  form.rs  logo.rs  mod.rs  modal.rs  toggle_expand.rs  truncate_left.rs
desktop/src/pages/: dashboard.rs  home.rs  index.rs  landing.rs  settings.rs
desktop/src/pages/auth/: login.rs  logout.rs  register.rs
desktop/src/pages/project/: canvas.rs  common.rs  layers.rs  mod.rs  project_bar.rs  settings.rs  state.rs  workspace.rs
desktop/src/pages/project/properties/: analyses.rs  asset.rs  asset_bulk.rs  common.rs  container.rs  container_bulk.rs  mixed_bulk.rs  mod.rs  project.rs
desktop/styles/: main.css  output.css  theme.js
lang/python/src/syre/: __init__.py  common.py  database.py  resources.py
lang/r/: DESCRIPTION  README.Rmd
lang/r/R/: api.R  commands.R  common.R  functions.R  resources.R
local/: Cargo.toml
local/database/: Cargo.toml
local/database/src/: common.rs  constants.rs  error.rs  event.rs  lib.rs  main.rs  query.rs  state.rs
local/database/src/server/: database.rs
local/database/src/server/file_system/: app.rs  container.rs  file.rs  folder.rs  graph.rs  mod.rs  project.rs
local/database/src/server/query/: actor.rs  handler.rs
local/database/src/server/state/: project.rs
local/database/src/server/store/: mod.rs
local/database/src/server/store/data_store/: data_store.rs
local/database/tests/: server_test.rs
local/fs_watcher/: Cargo.toml
local/fs_watcher/src/: command.rs  event.rs
local/fs_watcher/src/server/: actor.rs  fs_processor.rs  mod.rs  notify_processor.rs  notify_processor_test.rs  watcher.rs  windows.rs
local/runner/src/: lib.rs
local/runner/tests/: runner.rs
local/simulator/src/: simulator.rs
local/simulator/src/state/: mod.rs
local/src/: common.rs  common_test.rs  constants.rs  error.rs  lib.rs
local/src/graph/: tree.rs
local/src/loader/: container.rs  tree.rs
local/src/project/: container.rs  mod.rs  project.rs  project_test.rs
local/src/project/config/: mod.rs  runner_settings.rs  settings.rs
local/src/project/resources/: analysis.rs  container.rs  flag.rs  mod.rs  project.rs
local/src/system/: user_manifest.rs
local/src/system/config/: runner_settings.rs
local/src/types/: mod.rs
local/tests/: project-container.rs
