[package]
name = "syre-desktop-ui"
version = "0.11.0"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Syre desktop application."

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "gui", "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { workspace = true, features = ["serde"] }
codee = "0.2"
console_error_panic_hook = "0.1.7"
derive_more = { workspace = true, features = ["debug"] }
futures.workspace = true
getrandom = { version = "0.2", features = ["js"] }
has_id.workspace = true
icondata = "0.5"
js-sys = "0.3"
leptos = { version = "0.7", features = ["nightly", "csr"] }
leptos_icons = { git = "https://github.com/bicarlsen/leptos-icons", branch = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", features = ["storage"]}
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
syre-core = { workspace = true, features = ["serde"] }
syre-desktop-lib = { path = "src-lib" }
syre-local = { workspace = true }
syre-local-database.workspace = true
# tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["core", "event", "menu", "window"] }
tauri-sys = { git = "https://github.com/bicarlsen/tauri-sys", branch = "v2", features = ["core", "event", "menu", "window"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing-subscriber = { workspace = true, features = ["time"] }
tracing-web = "0.1.3"
tracing.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]  
version = "0.3.70"
features = [
	"AbortController",
	"AbortSignal",
	"AddEventListenerOptions",
	"CssStyleDeclaration",
	"Element",
	"Event",
	"EventInit",
	"EventTarget",
	"FocusEvent",
	"HtmlCollection",
	"HtmlDialogElement",
	"HtmlDivElement",
	"HtmlElement",
	"HtmlInputElement",
	"HtmlOptionElement",
	"HtmlSelectElement",
	"HtmlSpanElement",
	"InputEvent",
	"Performance",
	"ResizeObserver",
	"ResizeObserverBoxOptions",
	"ResizeObserverEntry",
	"ResizeObserverOptions",
	"ResizeObserverSize",
	"SvgElement",
	"SvgGraphicsElement",
	"SvgMatrix",
]
