[package]
name = "syre-local"
version = "0.10.2"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Local functionality for Syre data management and analysis software."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "science", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine.workspace = true  # TODO Only needed for documentation.
calamine.workspace = true
chrono = { workspace = true, features = ["serde"] }
csv.workspace = true
derivative = "2.2"
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
directories = { workspace = true, optional = true }
fastrand = "2.1"
glob = { workspace = true, optional = true }
has_id = { workspace = true, features = ["derive", "serde"] }
ignore = { workspace = true, optional = true }
io_error_serde.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
validator = "0.19"
walkdir.workspace = true
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Storage"] }

syre-core = { workspace = true, features = ["serde"] }

[dev-dependencies]
fake = { workspace = true }
lazy_static = "1.4.0"
rand = { workspace = true }
tempfile.workspace = true

[features]
fs = ["dep:directories", "dep:glob", "dep:ignore"]
